--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,49 +1,61 @@
 /* Your app styles here */
-.md .navbar-top{
-    background: linear-gradient(to right, rgba(105,41,135,1) 0%, rgba(202,116,213,1) 100%);
+
+.md .navbar-top {
+    background: linear-gradient(to right, rgba(105, 41, 135, 1) 0%, rgba(202, 116, 213, 1) 100%);
 }
-.md .toolbar-top{
-    background: linear-gradient(to right, rgba(105,41,135,1) 0%, rgba(202,116,213,1) 100%);
+
+.md .toolbar-top {
+    background: linear-gradient(to right, rgba(105, 41, 135, 1) 0%, rgba(202, 116, 213, 1) 100%);
 }
-.md .subnavbar:after{
+
+.md .subnavbar:after {
     display: none;
 }
-.md .tabbar-top{
+
+.md .tabbar-top {
     background: none;
 }
-.md .toolbar:after{
+
+.md .toolbar:after {
     display: none;
 }
-.md .toolbar-bot{
-    background: linear-gradient(to right, rgba(105,41,135,1) 0%, rgba(202,116,213,1) 100%);
+
+.md .toolbar-bot {
+    background: linear-gradient(to right, rgba(105, 41, 135, 1) 0%, rgba(202, 116, 213, 1) 100%);
 }
-.md .toolbar-bot i.icon{
+
+.md .toolbar-bot i.icon {
     font-size: 34px;
 }
-.md .tabbar-top a.link{
+
+.md .tabbar-top a.link {
     line-height: 12px;
     min-width: 44px;
     text-transform: none;
     font-size: 13px;
 }
-.md .toolbar-bot .toolbar-inner .tab-link{
+
+.md .toolbar-bot .toolbar-inner .tab-link {
     font-size: 12px;
     overflow: visible;
 }
-.md .navbar-top .titles{
+
+.md .navbar-top .titles {
     display: flex;
     flex-direction: column;
     width: 100%;
     text-align: center;
     margin-right: 56px;
 }
-.md .navbar-top .titles .title{
+
+.md .navbar-top .titles .title {
     text-align: center;
     font-weight: 600;
     font-size: 26px;
     line-height: 24px;
 }
-.md .navbar-top .titles .subtitle{
+
+.md .navbar-top .titles .subtitle {
     text-align: center;
     font-family: 'robotolight';
     font-size: 24px;
@@ -51,38 +63,46 @@
     line-height: 24px;
 }
 
-.md .list .item-inner:after{
+.md .list .item-inner:after {
     display: none;
 }
-.md .list ul:after{
+
+.md .list ul:after {
     display: none;
 }
-.md .list ul:before{
+
+.md .list ul:before {
     display: none;
 }
-.md .searchbar-backdrop{
+
+.md .searchbar-backdrop {
     background: none;
 }
-.md .toolbar a.link i + span{
+
+.md .toolbar a.link i+span {
     margin-left: 0px;
     font-size: 10px;
     margin-top: 5px;
     line-height: 36px;
 }
-.md .tabbar .tab-link-highlight{
+
+.md .tabbar .tab-link-highlight {
     background-color: #f7f7f7;
 }
-.md .popup-page .page-content{
-    background: linear-gradient(to right, rgba(105,41,135,1) 0%, rgba(202,116,213,1) 100%);
+
+.md .popup-page .page-content {
+    background: linear-gradient(to right, rgba(105, 41, 135, 1) 0%, rgba(202, 116, 213, 1) 100%);
     padding: 0px 15px;
 }
-.md .popup-page .popup-block{
+
+.md .popup-page .popup-block {
     background-color: #fff;
     text-align: center;
     padding-bottom: 30px;
     margin: 80px 0;
 }
-.md .popup-page .block-header{
+
+.md .popup-page .block-header {
     text-align: center;
     font-size: 20px;
     color: #000;
@@ -90,24 +110,28 @@
     padding-top: 40px;
     padding-bottom: 10px;
 }
-.md .close-but{
+
+.md .close-but {
     position: absolute;
     right: 0;
     top: 10px;
     color: #9b9b9b;
 }
-.md .popup-inputs ul li{
+
+.md .popup-inputs ul li {
     border: 1px solid #dbdbdb;
     margin-bottom: 10px;
 }
-.md .item-input-wrap:after{
+
+.md .item-input-wrap:after {
     display: none;
 }
+
 .md .popup-inputs ul li .item-input input::placeholder {
     color: #000;
-  }
+}
 
-.md .blue-but{
+.md .blue-but {
     background-color: #2561dd;
     border-radius: 15px;
     color: #fff;
@@ -117,7 +141,8 @@
     font-family: 'robotolight';
     font-weight: 100;
 }
-.md .popup-page .but{
+
+.md .popup-page .but {
     display: inline-table;
     background-color: #3a589e;
     padding-top: 20px;
@@ -131,15 +156,19 @@
     font-weight: 100;
     box-shadow: 0px 2px 6px 0px rgb(84, 84, 84);
 }
-.md .popup-page .but i{
+
+.md .popup-page .but i {
     margin-right: 10px;
 }
-.md .popup-page .red{
+
+.md .popup-page .red {
     background-color: #ea4235;
 }
-.md .popup-page .segmented{
+
+.md .popup-page .segmented {
     justify-content: space-between;
 }
-.md .page-content{
+
+.md .page-content {
     padding-bottom: 60px;
 }
